--- a/Python Fundamentals/Module_3_1_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_3_1_Python_Fundamentals.ipynb
@@ -50,11 +50,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New York\n",
+      "Shanghai\n",
+      "Munich\n",
+      "Tokyo\n",
+      "Dubai\n",
+      "Mexico City\n",
+      "São Paulo\n",
+      "Hyderabad\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "cities = [\"New York\", \"Shanghai\", \"Munich\", \"Tokyo\", \"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\"]\n",
@@ -65,11 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total sales: 124\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "sales = [6, 8, 9, 11, 12, 17, 19, 20, 22]\n",
@@ -91,11 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total sales: 124\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example \n",
     "sales = [6, 8, 9, 11, 12, 17, 19, 20, 22]\n",
@@ -121,41 +146,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eagle\n",
+      "crow\n",
+      "bluejay\n",
+      "hawk\n",
+      "penguin\n",
+      "owl\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create a list of 4 to 6 strings: birds\n",
     "# print each bird in the list\n",
+    "birds = [\"eagle\", \"crow\", \"bluejay\", \"hawk\", \"penguin\", \"owl\"]\n",
+    "\n",
+    "for bird in birds:\n",
+    "    print (bird)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]  create a list of 7 integers: player_points\n",
     "# [ ] print double the points for each point value\n",
+    "player_points = [ 1, 2, 3, 4, 5, 6, 7]\n",
+    "\n",
+    "for point in player_points:\n",
+    "    print (2*point)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eagle crow bluejay hawk penguin owl \n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create long_string by concatenating the items in the \"birds\" list previously created\n",
     "# print long_string - make sure to put a space betweeen the bird names\n",
-    "\n"
+    "bird_string = \"\"\n",
+    "for bird in birds:\n",
+    "    bird_string = bird_string + bird + \" \"\n",
+    "    \n",
+    "print (bird_string)"
    ]
   },
   {
@@ -180,11 +246,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "calcaneus\n",
+      "talus\n",
+      "cuboid\n",
+      "navicular\n",
+      "\n",
+      "lateral cuneiform\n",
+      "intermediate cuneiform\n",
+      "medial cuneiform\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example of sorting into strings to display\n",
     "foot_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
@@ -204,11 +284,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['calcaneus', 'talus', 'cuboid', 'navicular']\n",
+      "['lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example of sorting into lists\n",
     "foot_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
@@ -240,29 +327,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Munich\n",
+      "Mexico City\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Using cities from the example above iterate throught the list using \"for\"/\"in\"\n",
     "# [ ] Print only cities starting with \"m\"\n",
-    "\n"
+    "\n",
+    "for city in cities:\n",
+    "    if (city.lower()).startswith(\"m\"):\n",
+    "        print (city)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'A' Cities: Shanghai Dubai São Paulo Hyderabad \n",
+      "No 'A' Cities: New York Munich Tokyo Mexico City \n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Using cities from the example above iterate throught the list using \"for\"/\"in\"\n",
     "# cities = [\"New York\", \"Shanghai\", \"Munich\", \"Tokyo\", \"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\"]\n",
     "# [ ] sort into lists with \"A\" in the city name and without \"A\" in the name: a_city & no_a_city\n",
-    "\n"
+    "a_city = \"\"\n",
+    "no_a_city = \"\"\n",
+    "\n",
+    "for city in cities:\n",
+    "    if \"A\" in city.upper():\n",
+    "        a_city = a_city + city + \" \"\n",
+    "    else:\n",
+    "        no_a_city = no_a_city + city + \" \"\n",
+    "    \n",
+    "print (\"'A' Cities: \" + a_city)\n",
+    "print (\"No 'A' Cities: \" + no_a_city)"
    ]
   },
   {
@@ -291,11 +405,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total # of \"a\" found in the list is 6\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# iterates the \"cities\" list, count & sum letter \"a\" in each city name\n",
@@ -320,11 +440,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter a city visited: New York\n",
+      "New York in default cities is True\n",
+      "New York in visitied_cites list is True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# city_search function has a default list of cities to search\n",
@@ -365,13 +493,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What color paint would you like?: red\n",
+      "Red was found.\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete paint stock\n",
+    "\n",
+    "paint_colors = [\"red\", \"blue\", \"green\", \"purple\", \"black\"]\n",
+    "\n",
+    "color_request = input (\"What color paint would you like?: \")\n",
+    "gate = True\n",
+    "\n",
+    "for color in paint_colors:\n",
+    "#    print (color)\n",
+    "    if color.lower() == color_request.lower():\n",
+    "        print (color_request.capitalize() + \" was found.\")\n",
+    "        gate = False\n",
+    "        break\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "if gate:\n",
+    "    print (color_request.capitalize() + \" was not found.\")\n",
+    "\n",
+    "        \n",
+    "        \n",
     "\n"
    ]
   },
@@ -400,28 +555,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of a foot bone: j\n",
+      "That is not a correct answer.\n",
+      "Enter the name of a foot bone: j\n",
+      "That is not a correct answer.\n",
+      "Your total correct is: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Complete Foot Bones Quiz\n",
     "# foot_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\",\n",
     "#             \"intermediate cuneiform\", \"medial cuneiform\"]\n",
-    "\n"
+    "foot_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \"intermediate cuneiform\", \"medial cuneiform\"]\n",
+    "count = 0\n",
+    "i = 0\n",
+    "\n",
+    "def bone_finder (seeker, bone_list):\n",
+    "        \n",
+    "    for bone in bone_list:\n",
+    "        if seeker.lower() == bone.lower():\n",
+    "            print (\"CORRECT!! \" + seeker.capitalize() + \" found.\")\n",
+    "            return True\n",
+    "        else: \n",
+    "            pass\n",
+    "        \n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "while i < 2:\n",
+    "    if bone_finder(input (\"Enter the name of a foot bone: \"), foot_bones):\n",
+    "        count += 1\n",
+    "    else:\n",
+    "        print (\"That is not a correct answer.\")\n",
+    "    i += 1\n",
+    "    \n",
+    "print (\"Your total correct is:\", count)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of a foot bone (You can use each correct answer only once): talus\n",
+      "CORRECT!! Talus found.\n",
+      "Enter the name of a foot bone (You can use each correct answer only once): talus\n",
+      "That is not a correct answer.\n",
+      "Your total correct is: 1\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] bonus version\n",
-    "\n"
+    "\n",
+    "foot_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \"intermediate cuneiform\", \"medial cuneiform\"]\n",
+    "count = 0\n",
+    "i = 0\n",
+    "\n",
+    "def bone_finder (seeker, bone_list):\n",
+    "        \n",
+    "    for bone in bone_list:\n",
+    "        if seeker.lower() == bone.lower():\n",
+    "            print (\"CORRECT!! \" + seeker.capitalize() + \" found.\")\n",
+    "            bone_list.remove(seeker.lower())\n",
+    "            return True\n",
+    "        else: \n",
+    "            pass\n",
+    "        \n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "while i < 2:\n",
+    "    if bone_finder(input (\"Enter the name of a foot bone (You can use each correct answer only once): \"), foot_bones):\n",
+    "        count += 1\n",
+    "    else:\n",
+    "        print (\"That is not a correct answer.\")\n",
+    "    i += 1\n",
+    "    \n",
+    "print (\"Your total correct is:\", count)"
    ]
   },
   {
@@ -451,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
