--- a/Python Fundamentals/Module_3_2_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_3_2_Python_Fundamentals.ipynb
@@ -55,11 +55,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "for count in range(10):\n",
@@ -68,11 +83,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digits = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] \n",
+      "\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run example\n",
     "digits = range(10)\n",
@@ -84,11 +116,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub_total: 0\n",
+      "sub_total: 1\n",
+      "sub_total: 3\n",
+      "sub_total: 6\n",
+      "sub_total: 10\n",
+      "sub_total: 15\n",
+      "sub_total: 21\n",
+      "sub_total: 28\n",
+      "sub_total: 36\n",
+      "sub_total: 45\n",
+      "Total = 45\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "sub_total = 0\n",
@@ -100,11 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuesday\n",
+      "Wednesday\n",
+      "February\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# print the first half of a spelling list\n",
@@ -131,27 +187,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] for x = 6, use range(x) to print the numbers 1 through 6\n",
     "x = 6\n",
-    "\n"
+    "for y in range(x):\n",
+    "    print (y + 1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "24\n",
+      "120\n",
+      "720\n",
+      "5040\n",
+      "Total = 5040\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using range(x) multiply the numbers 1 through 7\n",
     "# 1x2x3x4x5x6x7 = 5040\n",
+    "x = 7\n",
+    "subtotal = 1\n",
+    "\n",
+    "for y in range(x):\n",
+    "    subtotal = subtotal * (y + 1)\n",
+    "    print (subtotal)\n",
+    "    \n",
+    "print (\"Total =\", subtotal)\n",
     "\n"
    ]
   },
@@ -164,16 +253,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.5\n",
+      "November\n",
+      "Annual\n",
+      "Calendar\n",
+      "Solstice\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the second half of a spelling list using a range(stop) loop to iterate the list\n",
     "spell_list = [\"Wednesday\", \"Tuesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
     "\n",
-    "\n"
+    "half_2 = len(spell_list)/2\n",
+    "\n",
+    "print (half_2)\n",
+    "\n",
+    "for count in range(4):\n",
+    "    print (spell_list[count + 3])\n"
    ]
   },
   {
@@ -205,11 +309,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "for count in range(5,10):\n",
@@ -218,11 +332,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub_total: 0 + 5 = 5\n",
+      "sub_total: 5 + 6 = 11\n",
+      "sub_total: 11 + 7 = 18\n",
+      "sub_total: 18 + 8 = 26\n",
+      "sub_total: 26 + 9 = 35\n",
+      "sub_total: 35 + 10 = 45\n",
+      "Total = 45\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "sub_total = 0\n",
@@ -236,11 +362,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "November\n",
+      "Annual\n",
+      "Calendar\n",
+      "Solstice\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "\n",
@@ -270,42 +405,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using range(start,stop), .append() the numbers 5 to 15 to the list: five_fifteen\n",
     "# [ ] print list five_fifteen\n",
-    "\n"
+    "five_fifteen = []\n",
+    "\n",
+    "for number in range(5,16):\n",
+    "    five_fifteen.append(number)\n",
+    "    \n",
+    "print (five_fifteen)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "February\n",
+      "November\n",
+      "Annual\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using range(start,stop) - print the 3rd, 4th and 5th words in spell_list\n",
     "# output should include \"February\", \"November\", \"Annual\"\n",
     "spell_list = [\"Tuesday\", \"Wednesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
-    "\n"
+    "\n",
+    "for index in range(2,5):\n",
+    "    print (spell_list[index])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Annual\n",
+      "Calendar\n",
+      "Solstice\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using code find the index of \"Annual\" in spell_list\n",
     "# [ ] using range, print the spell_list including \"Annual\" to end of list\n",
     "spell_list = [\"Tuesday\", \"Wednesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
+    "\n",
+    "for index in range(spell_list.index(\"Annual\"), len(spell_list)):\n",
+    "    print (spell_list[index])\n",
     "\n"
    ]
   },
@@ -339,11 +506,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "50\n",
+      "75\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "for count in range(25,101,25):\n",
@@ -352,11 +528,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub_total: 0 + 25 = 25\n",
+      "sub_total: 25 + 30 = 55\n",
+      "sub_total: 55 + 35 = 90\n",
+      "sub_total: 90 + 40 = 130\n",
+      "sub_total: 130 + 45 = 175\n",
+      "Total = 175\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "sub_total = 0\n",
@@ -370,11 +557,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuesday\n",
+      "February\n",
+      "Annual\n",
+      "Solstice\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example printing the 1st and then every other word in spell_list\n",
     "spell_list = [\"Tuesday\", \"Wednesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
@@ -385,11 +581,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example casting range to list\n",
     "odd_list = list(range(1,20,2))\n",
@@ -409,40 +611,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print numbers 10 to 20 by 2's using range\n",
-    "\n",
+    "temp = list(range(10,21,2))\n",
+    "print (temp)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print numbers 20 to 10 using range (need to countdown)\n",
     "# Hint: start at 20\n",
-    "\n"
+    "temp = list (range(20,9,-1))\n",
+    "print (temp)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuesday\n",
+      "November\n",
+      "Solstice\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print first and every third word in spell_list\n",
     "spell_list = [\"Tuesday\", \"Wednesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
+    "\n",
+    "for index in range(0, len(spell_list), 3):\n",
+    "    print (spell_list[index])\n",
     "\n"
    ]
   },
@@ -467,14 +694,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string: complexity\n",
+      "Odd cmlxt\n",
+      "Even opeiy\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete List of letters program- test with the word \"complexity\"\n",
-    "\n"
+    "word = input (\"Enter a string: \")\n",
+    "length = len (word)\n",
+    "odd_letters = \"\"\n",
+    "even_letters = \"\"\n",
+    "\n",
+    "for index in range (0, length, 2):\n",
+    "    odd_letters = odd_letters + word[index]\n",
+    "\n",
+    "for index in range (1, length, 2):\n",
+    "    even_letters = even_letters + word[index]\n",
+    "    \n",
+    "print (\"Odd\", odd_letters)\n",
+    "print (\"Even\", even_letters)"
    ]
   },
   {
@@ -487,14 +734,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] fix the error printing odd numbers 1 - 9\n",
-    "for num in range[1,10,2]:\n",
+    "for num in range(1,10,2):\n",
     "    print(num)\n",
     "\n",
     "\n"
@@ -525,7 +782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
