--- a/Python Fundamentals/Module_3_Practice_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_3_Practice_Python_Fundamentals.ipynb
@@ -27,44 +27,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solid - is state of matter #1\n",
+      "Liquid - is state of matter #2\n",
+      "Gas - is state of matter #3\n",
+      "Plasma - is state of matter #4\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print out the \"physical states of matter\" (matter_states) in 4 sentences using list iteration\n",
     "# each sentence should be of the format: \"Solid - is state of matter #1\" \n",
     "matter_states = ['solid', 'liquid', 'gas', 'plasma']\n",
+    "\n",
+    "for state in matter_states:\n",
+    "    print (state.capitalize() + \" - is state of matter #\" + str(matter_states.index(state) + 1))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['turkey', 'hawk', 'chicken', 'dove', 'crow']\n",
+      "['turkey', 'hawk', 'dove']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] iterate the list (birds) to see any bird names start with \"c\" and remove that item from the list\n",
     "# print the birds list before and after removals\n",
     "birds = [\"turkey\", \"hawk\", \"chicken\", \"dove\", \"crow\"]\n",
-    "\n"
+    "\n",
+    "print (birds)\n",
+    "\n",
+    "for bird in birds:\n",
+    "    if bird.startswith(\"c\"):\n",
+    "        birds.remove(bird)\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
+    "print (birds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total: 29\n",
+      "1pt baskets: 4\n",
+      "2pt baskets: 8\n",
+      "3pt baskets: 3\n"
+     ]
+    }
+   ],
    "source": [
     "# the team makes 1pt, 2pt or 3pt baskets\n",
     "# [ ] print the occurace of each type of basket(1pt, 2pt, 3pt) & total points using the list baskets\n",
     "baskets = [2,2,2,1,2,1,3,3,1,2,2,2,2,1,3]\n",
-    "\n"
+    "\n",
+    "total = 0\n",
+    "one_count = 0\n",
+    "two_count = 0\n",
+    "three_count =  0\n",
+    "\n",
+    "for value in baskets:\n",
+    "    if value == 1:\n",
+    "        total = total + 1\n",
+    "    elif value == 2:\n",
+    "        total = total + 2\n",
+    "    elif value == 3:\n",
+    "        total = total + 3        \n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
+    "print (\"Total:\", total)\n",
+    "print (\"1pt baskets:\", baskets.count(1))\n",
+    "print (\"2pt baskets:\", baskets.count(2))\n",
+    "print (\"3pt baskets:\", baskets.count(3))\n",
+    "        "
    ]
   },
   {
@@ -78,13 +135,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n",
+      "Hello!\n",
+      "Hello!\n",
+      "Hello!\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using range() print \"hello\" 4 times\n",
+    "x = range(4)\n",
+    "\n",
+    "for n in x:\n",
+    "  print(\"Hello!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [ ] find spell_list length\n",
+    "# [ ] use range() to iterate each half of spell_list  \n",
+    "# [ ] label & print the first and second halves\n",
+    "spell_list = [\"Tuesday\", \"Wednesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
     "\n",
     "\n"
    ]
@@ -92,24 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# [ ] find spell_list length\n",
-    "# [ ] use range() to iterate each half of spell_list  \n",
-    "# [ ] label & print the first and second halves\n",
-    "spell_list = [\"Tuesday\", \"Wednesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] build a list of numbers from 20 to 29: twenties \n",
@@ -122,9 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] iterate through the numbers populated in the list twenties and add each number to a variable: total\n",
@@ -136,9 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# check your answer above using range(start,stop)\n",
@@ -161,9 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] create a list of odd numbers (odd_nums) from 1 to 25 using range(start,stop,skip)\n",
@@ -175,9 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] create a Decending list of odd numbers (odd_nums) from 25 to 1 using range(start,stop,skip)\n",
@@ -189,9 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# the list, elements, contains the names of the first 20 elements in atomic number order\n",
@@ -205,9 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] # the list, elements_60, contains the names of the first 60 elements in atomic number order\n",
@@ -226,9 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -244,9 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] print the combined lists (numbers_1 & numbers_2) using \"+\" operator\n",
@@ -263,9 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] print the combined element lists (first_row & second_row) using \".extend()\" method\n",
@@ -298,9 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] create the program: combined 3 element rows \n",
@@ -314,9 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] .extend() jack_jill with \"next_line\" string - print the result\n",
@@ -337,9 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] use .reverse() to print elements starting with \"Calcium\", \"Chlorine\",... in reverse order\n",
@@ -352,9 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] reverse order of the list... Then print only words that are 8 characters or longer from the now reversed order\n",
@@ -375,9 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] sort the list element, so names are in alphabetical order and print elements\n",
@@ -390,9 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] print the list, numbers, sorted and then below print the original numbers list \n",
@@ -412,9 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] split the string, daily_fact, into a list of word strings: fact_words\n",
@@ -426,9 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] convert the string, code_tip, into a list made from splitting on the letter \"o\"\n",
@@ -439,9 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] split poem on \"b\" to create a list: poem_words\n",
@@ -463,9 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] print a comma separated string output from the list of Halogen elements using \".join()\"\n",
@@ -476,9 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] split the sentence, code_tip, into a words list\n",
@@ -503,9 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] cast the long_word into individual letters list \n",
@@ -517,9 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] use use end= in print to output each string in questions with a \"?\" and on new lines\n",
@@ -531,9 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] print each item in foot bones \n",
@@ -570,9 +589,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
