--- a/Python Fundamentals/Module_3_3_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_3_3_Python_Fundamentals.ipynb
@@ -568,15 +568,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hyderabad', 'Mexico City', 'Munich', 'New York', 'Shanghai', 'São Paulo']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] make a sorted copy (sorted_cities) of visited_cities list\n",
     "# [ ] remove city names 5 characters or less from sorted_cities \n",
     "# [ ] print visitied cites and sorted cities\n",
     "visited_cities = [\"New York\", \"Shanghai\", \"Munich\", \"Toyko\", \"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\"]\n",
-    "\n"
+    "sorted_cities = sorted(visited_cities)\n",
+    "\n",
+    "for i in sorted_cities:\n",
+    "    if len(i) <= 5:\n",
+    "        sorted_cities.remove(i)\n",
+    "    else:\n",
+    "        pass\n",
+    "print(sorted_cities)\n"
    ]
   },
   {
@@ -604,13 +619,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an animal or <Enter> to quit: dog\n",
+      "Enter an animal or <Enter> to quit: cat\n",
+      "Enter an animal or <Enter> to quit: bird\n",
+      "Enter an animal or <Enter> to quit: \n",
+      "['dog', 'cat', 'bird']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] build a list (add_animals) using a while loop, stop adding when an empty string is entered\n",
     "add_animals = []\n",
-    "\n"
+    "animal = input (\"Enter an animal or <Enter> to quit: \")\n",
+    "\n",
+    "while animal != \"\":\n",
+    "    add_animals.append(animal)\n",
+    "    animal = input (\"Enter an animal or <Enter> to quit: \")\n",
+    "    \n",
+    "print (add_animals)\n"
    ]
   },
   {
@@ -623,13 +656,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Chimpanzee', 'Panther', 'Wolf', 'Armadillo', 'dog', 'cat', 'bird']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] extend the lists into animals, then sort \n",
     "animals = [\"Chimpanzee\", \"Panther\", \"Wolf\", \"Armadillo\"]\n",
-    "\n"
+    "\n",
+    "animals.extend(add_animals)\n",
+    "print(animals)"
    ]
   },
   {
@@ -642,12 +685,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Would you like to see the animals in alpha or reverse alpha order? reverse\n",
+      "['dog', 'cat', 'bird', 'Wolf', 'Panther', 'Chimpanzee', 'Armadillo']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] get input if list should be viewed alpha or reverse alpha and display list\n",
-    "\n"
+    "choice = input (\"Would you like to see the animals in alpha or reverse alpha order? \")\n",
+    "\n",
+    "animals.sort()\n",
+    "\n",
+    "if choice == \"reverse\":\n",
+    "    animals.reverse()\n",
+    "else:\n",
+    "    pass\n",
+    "print(animals)\n"
    ]
   },
   {
