--- a/Python Fundamentals/Module_3_Required_Code_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_3_Required_Code_Python_Fundamentals.ipynb
@@ -70,14 +70,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a phrase, such as a poem, verse, or saying: Little fly, Thy summer’s play My thoughtless hand Has brushed away. Am not I A fly like thee? Or art not thou A man like me?\n",
+      "or BRUSHED thy \n",
+      " not Little thou \n",
+      " me? SUMMER’S thee? \n",
+      " like THOUGHTLESS play \n",
+      " i a not \n",
+      " hand a my \n",
+      " fly am man \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create poem mixer\n",
     "# [] copy and paste in edX assignment page\n",
+    "\n",
+    "def word_mixer(word_list):\n",
+    "    \n",
+    "    word_list.sort()\n",
+    "    new_list = []\n",
+    "    \n",
+    "    while len(word_list) > 5:\n",
+    "        new_list.append(word_list.pop(-5))\n",
+    "        new_list.append(word_list.pop(0))\n",
+    "        new_list.append(word_list.pop(-1))\n",
+    "        new_list.append(\"\\n\")\n",
+    "    \n",
+    "    return(new_list)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "in_string = input (\"Enter a phrase, such as a poem, verse, or saying: \")\n",
+    "\n",
+    "\n",
+    "in_list = in_string.split(\" \")\n",
+    "\n",
+    "# i = 0\n",
+    "\n",
+    "for i in range(0,len(in_list)):\n",
+    "    word = in_list[i]\n",
+    "    if len(word) <= 3:\n",
+    "        in_list[i] = word.lower()\n",
+    "    elif len(word) >= 7:\n",
+    "        in_list[i] = word.upper()\n",
+    "    else:\n",
+    "        in_list[i] = word\n",
+    "    \n",
+    "print(\" \".join(word_mixer(in_list)))\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -108,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
