--- a/Python Fundamentals/Module_4_Practice_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_4_Practice_Python_Fundamentals.ipynb
@@ -41,14 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    43  100    43    0     0    197      0 --:--:-- --:--:-- --:--:--   198\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/rainbow as rainbow.txt\n",
-    "\n"
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/rainbow -o rainbow.txt\n",
+    "    \n"
    ]
   },
   {
@@ -61,15 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ]  Open rainbow.txt in read mode & read as list with .readlines()\n",
-    "\n",
-    "\n"
+    "rainbow_file = open(\"rainbow.txt\",\"r\")\n",
+    "rainbow_colors = rainbow_file.readlines()\n",
+    "rainbow_file.close()"
    ]
   },
   {
@@ -84,13 +94,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blue\n",
+      "\n",
+      "green\n",
+      "\n",
+      "indigo\n",
+      "\n",
+      "orange\n",
+      "\n",
+      "red\n",
+      "\n",
+      "violet\n",
+      "\n",
+      "yellow\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] sort rainbow_colors list, iterate the list to print each color\n",
+    "rainbow_colors.sort()\n",
+    "for color in rainbow_colors:\n",
+    "    print(color)\n",
+    "    \n",
     "\n"
    ]
   },
@@ -113,14 +146,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100   222  100   222    0     0   1233      0 --:--:-- --:--:-- --:--:--  1233\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] The Weather: import world_mean_team.csv as mean_temp.txt\n",
-    "\n"
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/world_temp_mean.csv -o mean_temp.txt\n"
    ]
   },
   {
@@ -134,14 +177,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "city,country,month ave: highest high,month ave: lowest low\n",
+      "['city', 'country', 'month ave: highest high', 'month ave: lowest low']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] The Weather: open file, read/print first line, convert line to list (splitting on comma)\n",
-    "\n"
+    "temp_file = open(\"mean_temp.txt\",\"r\")\n",
+    "\n",
+    "headings = temp_file.readline().strip(\"\\n\")\n",
+    "print(headings)\n",
+    "headings = headings.split(',')\n",
+    "print(headings)\n"
    ]
   },
   {
@@ -162,14 +217,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "City : month ave: highest high\n",
+      "Beijing : 30.9\n",
+      "Cairo : 34.7\n",
+      "London : 23.5\n",
+      "Nairobi : 26.3\n",
+      "New york city : 28.9\n",
+      "Sydney : 26.5\n",
+      "Tokyo : 30.8\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] The Weather: use while loop to print city and highest monthly average temp in celsius\n",
-    "\n"
+    "\n",
+    "\n",
+    "print (headings[0].capitalize(), \":\", headings[2])\n",
+    "\n",
+    "while True:\n",
+    "    city_temp = temp_file.readline().strip(\"\\n\")\n",
+    "    city_temp = city_temp.split(',')\n",
+    "    \n",
+    "    \n",
+    "    if city_temp[0] == \"\":\n",
+    "        break\n",
+    "    else:\n",
+    "        print (city_temp[0].capitalize(), \":\", city_temp[2])\n",
+    "    \n"
    ]
   },
   {
@@ -191,9 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] use curl to download https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/digits_of_pi as pi.txt\n",
@@ -217,9 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] Set up the project files and initial values\n",
@@ -246,9 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n"
@@ -290,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
