--- a/Python Fundamentals/Module_4_1_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_4_1_Python_Fundamentals.ipynb
@@ -64,11 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    56  100    56    0     0    245      0 --:--:-- --:--:-- --:--:--   245\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem1.txt -o poem1.txt\n"
@@ -106,10 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ]Run to open the file in memory as poem_file\n",
@@ -118,11 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='poem1.txt' mode='r' encoding='cp1252'>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] run and review code to test if open worked \n",
     "# should display name='poem1.txt' and no errors\n",
@@ -148,26 +165,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    56  100    56    0     0    241      0 --:--:-- --:--:-- --:--:--   241\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import cities.txt\n",
-    "\n"
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/cities -o cities.txt\n",
+    "    \n",
+    "cities = open(\"cities.txt\", \"r\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='cities.txt' mode='r' encoding='cp1252'>\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] open cities.txt as cities_file\n",
     "# [ ] test cities.txt was opened \n",
+    "cities_file = open(\"cities.txt\", \"r\")\n",
+    "cities_file\n",
+    "print (cities_file)\n",
     "\n"
    ]
   },
@@ -199,10 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example\n",
@@ -211,11 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Loops I repeat\\nloops\\nloops\\nloops\\nI repeat\\nuntil I\\nbreak\\n'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# shows the file as a string with formatting characters such as \"\\n\", output should be non-blank\n",
@@ -224,11 +269,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "loops\n",
+      "loops\n",
+      "loops\n",
+      "I repeat\n",
+      "until I\n",
+      "break\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# since .read() loaded the file as a string it can be printed\n",
@@ -255,28 +313,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Beijing\\nCairo\\nLondon\\nNairobi\\nNew York City\\nSydney\\nTokyo\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] after import and open of cities.txt in task 1\n",
     "# [ ] read cities_file as cities\n",
     "# [ ] display the string: cities\n",
+    "cities_file = open(\"cities.txt\", \"r\")\n",
+    "\n",
+    "cities = cities_file.read()\n",
+    "\n",
+    "cities\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beijing\n",
+      "Cairo\n",
+      "London\n",
+      "Nairobi\n",
+      "New York City\n",
+      "Sydney\n",
+      "Tokyo\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the string: cities\n",
-    "\n"
+    "print (cities)\n"
    ]
   },
   {
@@ -308,11 +393,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I re\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Loops I re'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example to read poem1.txt 10 characters at a time\n",
     "poem_file = open('poem1.txt', 'r')\n",
@@ -323,11 +424,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'peat\\nloops'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example, + 10 more characters\n",
     "# reads and displays without storing in a variable\n",
@@ -336,11 +446,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "loops\n",
+      "loo\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example, + 10 more characters\n",
     "# reads and stores in variable poem_parts\n",
@@ -350,11 +468,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "loops\n",
+      "loops\n",
+      "I repeat\n",
+      "until I\n",
+      "break\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] REPEATEDLY RUN this cell,  + 5 more characters each time run are appended using string addition\n",
     "# [ ]  consider why no additional text displays after multiple runs\n",
@@ -384,45 +514,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100   303  100   303    0     0   3523      0 --:--:-- --:--:-- --:--:--  3523\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] digits of pi\n",
     "# 1. import digits_of_pi.txt\n",
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/digits_of_pi -o digits_of_pi_text.txt\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.14\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] digits of pi\n",
     "# 2. open as digits_of_pi_text \n",
     "# 3. read() 4 char of digits_of_pi_text to pi_digits variable \n",
     "# 4. print pi_digits  \n",
-    "\n"
+    "digits_of_pi_text = open (\"digits_of_pi_text.txt\", \"r\")\n",
+    "pi_digits = digits_of_pi_text.read(4)\n",
+    "print (pi_digits)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793238462643383279\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] digits of pi\n",
     "# 5. add to pi_digits string with string addition  \n",
     "#   a. add next 4 characters from digits_of_pi obtained from read()  \n",
     "#   b. run the cell multiple times to get more digits of *pi*\n",
-    "\n"
+    "pi_digits += digits_of_pi_text.read(4)\n",
+    "\n",
+    "print (pi_digits)\n"
    ]
   },
   {
@@ -458,11 +615,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOOPS I REPEAT\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_file = open('poem1.txt', 'r')\n",
@@ -472,11 +636,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_part = poem_file.read(6).title()\n",
@@ -485,11 +656,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loops\n",
+      "\n",
+      "False isalpha() because of `\\n`\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'loops\\n'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_part = poem_file.read(6)\n",
@@ -500,11 +689,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repeat\n",
+      "loops\n",
+      "loops\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "poem_file = open('poem1.txt', 'r')\n",
@@ -531,14 +728,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beijing\n",
+      "Cairo\n",
+      "London\n",
+      "Nairobi\n",
+      "New York City\n",
+      "Sydney\n",
+      "Tokyo\n",
+      "\n",
+      "B\n",
+      "C\n",
+      "L\n",
+      "N\n",
+      "NYC\n",
+      "S\n",
+      "T\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] compelete the task\n",
-    "\n"
+    "cities_file = open(\"cities.txt\", \"r\")\n",
+    "cities = cities_file.read()\n",
+    "i = 0\n",
+    "initials = \"\"\n",
+    "\n",
+    "print (cities)\n",
+    "\n",
+    "while i < len(cities):\n",
+    "    if cities[i].isupper():\n",
+    "        initials += cities[i]\n",
+    "    elif cities[i] == \"\\n\":\n",
+    "        initials += \"\\n\"\n",
+    "    else:\n",
+    "        pass\n",
+    "    i += 1\n",
+    "\n",
+    "print (initials)\n"
    ]
   },
   {
@@ -577,7 +811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
