--- a/Python Fundamentals/Module_4_2_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_4_2_Python_Fundamentals.ipynb
@@ -57,12 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    56  100    56    0     0    297      0 --:--:-- --:--:-- --:--:--   297\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Run to download file to notebook\n",
     "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem1.txt -o poem1.txt"
@@ -70,11 +81,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Loops I repeat\\n',\n",
+       " 'loops\\n',\n",
+       " 'loops\\n',\n",
+       " 'loops\\n',\n",
+       " 'I repeat\\n',\n",
+       " 'until I\\n',\n",
+       " 'break\\n']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# open address to file\n",
@@ -87,11 +113,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "I repeat\n",
+      "\n",
+      "until I\n",
+      "\n",
+      "break\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "for line in poem_lines:\n",
@@ -119,38 +164,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    56  100    56    0     0    320      0 --:--:-- --:--:-- --:--:--   321\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import cities\n",
-    "\n"
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/cities -o cities.txt\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] open cities.txt as cities_file and read the file as a list: cities_lines\n",
-    "\n"
+    "\n",
+    "cities_files = open(\"cities.txt\", \"r\")\n",
+    "cities_lines = cities_files.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beijing\n",
+      "\n",
+      "Cairo\n",
+      "\n",
+      "London\n",
+      "\n",
+      "Nairobi\n",
+      "\n",
+      "New York City\n",
+      "\n",
+      "Sydney\n",
+      "\n",
+      "Tokyo\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] use list iteration to print each city in cities_lines list\n",
-    "\n"
+    "for i in cities_lines:\n",
+    "    print (i)\n"
    ]
   },
   {
@@ -190,11 +266,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loops I repeat\\n', 'loops\\n', 'loops\\n', 'loops\\n', 'I repeat\\n', 'until I\\n', 'break\\n']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run examples\n",
     "# [ ] re-open file and read file as a list of strings\n",
@@ -205,11 +287,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "I repeat\n",
+      "\n",
+      "until I\n",
+      "\n",
+      "break\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print each list item \n",
     "for line in poem_lines:\n",
@@ -218,11 +319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loops I repeat', 'loops', 'loops', 'loops', 'I repeat', 'until I', 'break']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] remove the last character of each list item, which is \"\\n\"\n",
     "count = 0\n",
@@ -236,11 +343,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "loops\n",
+      "loops\n",
+      "loops\n",
+      "I repeat\n",
+      "until I\n",
+      "break\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print each list item \n",
     "for line in poem_lines:\n",
@@ -263,36 +382,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] re-open file and read file as a list of strings \n",
     "# [ ] open cities.txt as cities_file and read the file as a list: cities_lines\n",
-    "\n"
+    "cities_file = open(\"cities.txt\",\"r\")\n",
+    "cities_lines = cities_file.readlines()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] remove the last character, \"\\n\", of each cities_lines list item \n",
-    "\n"
+    "index = 0\n",
+    "\n",
+    "for line in cities_lines:\n",
+    "    cities_lines[index] = line[:-1]\n",
+    "    index += 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beijing\n",
+      "Cairo\n",
+      "London\n",
+      "Nairobi\n",
+      "New York City\n",
+      "Sydney\n",
+      "Tokyo\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print each list item in cities_lines\n",
     "for line in cities_lines:\n",
@@ -327,10 +459,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example: open and readlines of poem1.txt\n",
@@ -339,11 +469,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Loops I repeat\\n', 'loops\\n', 'loops\\n', 'loops\\n', 'I repeat\\n', 'until I\\n', 'break\\n']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example: readlines breaks if file is no longer open\n",
     "\n",
@@ -353,10 +489,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 32,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example: Close poem1\n",
@@ -382,61 +516,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] open cities.txt as cities_file\n",
-    "\n"
+    "cities_file = open(\"cities.txt\", \"r\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Beijing\\n', 'Cairo\\n', 'London\\n', 'Nairobi\\n', 'New York City\\n', 'Sydney\\n', 'Tokyo\\n']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] read the lines as cities_lines\n",
-    "\n"
+    "\n",
+    "cities_lines = cities_file.readlines()\n",
+    "print (cities_lines)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "London\n",
+      "\n",
+      "Nairobi\n",
+      "\n",
+      "New York City\n",
+      "\n",
+      "Sydney\n",
+      "\n",
+      "Tokyo\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the cities that start with the letter \"D\" or greater\n",
-    "\n"
+    "for city in cities_lines:\n",
+    "    if city[0] > \"D\":\n",
+    "        print (city)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] test that file is closed\n",
-    "\n"
+    "cities_lines= cities_file.readline()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] close cities_file\n",
+    "cities_file.close()\n",
+    "\n",
     "\n"
    ]
   },
@@ -459,69 +614,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    57  100    57    0     0    304      0 --:--:-- --:--:-- --:--:--   303\n",
+      "100    57  100    57    0     0    304      0 --:--:-- --:--:-- --:--:--   303\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem2.txt as poem2.txt\n",
-    "\n"
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem2.txt -o poem2.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] open poem2.txt as poem2_text in read mode\n",
-    "\n"
+    "poem2_text = open(\"poem2.txt\", \"r\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] create a list of strings, called poem2_lines, from each line of poem2_text\n",
-    "\n"
+    "poem2_lines = poem2_text.readlines()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 51,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] remove the newline character for each list item in poem2_lines\n",
-    "\n"
+    "index = 0\n",
+    "\n",
+    "for line in poem2_lines:\n",
+    "    poem2_lines[index] = line[:-1]\n",
+    "    index += 1\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "end\n",
+      "False\n",
+      "not True\n",
+      "loop\n",
+      "True\n",
+      "loop\n",
+      "True\n",
+      "I loop\n",
+      "while True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the poem2 lines in reverse order\n",
-    "\n"
+    "\n",
+    "poem2_lines.reverse()\n",
+    "\n",
+    "for line in poem2_lines:\n",
+    "    print (line)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "[Terms of use](http://go.microsoft.com/fwlink/?LinkID=206977) &nbsp; [Privacy & cookies](https://go.microsoft.com/fwlink/?LinkId=521839) &nbsp; © 2017 Microsoft"
    ]
@@ -544,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
