--- a/Python Fundamentals/Module_4_3_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_4_3_Python_Fundamentals.ipynb
@@ -58,11 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    56  100    56    0     0    206      0 --:--:-- --:--:-- --:--:--   206\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]Run to download file poem1.txt\n",
     "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem1.txt -o poem1.txt "
@@ -70,10 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example\n",
@@ -83,10 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example\n",
@@ -98,11 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "loops\n",
+      "loops\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example: print the first 3 .readline() values\n",
     "print(poem_line1 + poem_line2 + poem_line3)"
@@ -110,11 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "I/O operation on closed file.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-a4a02346db57>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# [ ] review and run example printing return value & re-run several times\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoem1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: I/O operation on closed file."
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example printing return value & re-run several times\n",
     "print(poem1.readline())"
@@ -122,10 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example to close file in memory- then run previous cell\n",
@@ -152,62 +175,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    43  100    43    0     0    198      0 --:--:-- --:--:-- --:--:--   198\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/rainbow as rainbow.txt\n",
-    "\n"
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/rainbow -o rainbow.txt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] open rainbow.txt as rainbow_text\n",
+    "rainbow_text = open(\"rainbow.txt\",\"r\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] read the first 3 lines into variables: color1, color2, color3\n",
-    "\n"
+    "color1 = rainbow_text.readline()\n",
+    "color2 = rainbow_text.readline()\n",
+    "color3 = rainbow_text.readline()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] close rainbow.txt\n",
-    "\n"
+    "\n",
+    "rainbow_text.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red\n",
+      "\n",
+      "orange\n",
+      "\n",
+      "yellow\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the first 3 colors\n",
-    "\n"
+    "\n",
+    "print (color1)\n",
+    "print (color2)\n",
+    "print (color3)"
    ]
   },
   {
@@ -241,10 +287,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example\n",
@@ -254,11 +298,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LOOPS I REPEAT\n",
+      "LOOPS\n",
+      "LOOPS\n",
+      "LOOPS\n",
+      "I REPEAT\n",
+      "UNTIL I\n",
+      "BREAK\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - use a while loop to read each line of a file \n",
     "#  remove last character ('\\n') and print as upper case\n",
@@ -271,10 +327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example\n",
@@ -300,39 +354,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 28,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] open rainbow.txt as rainbow_text as read-only\n",
-    "\n"
+    "\n",
+    "rainbow_text = open(\"rainbow.txt\",\"r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Red\n",
+      "Orange\n",
+      "Yellow\n",
+      "Green\n",
+      "Blue\n",
+      "Indigo\n",
+      "Violet\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] read the color from lines of rainbow_text in a while loop\n",
     "# [ ] print each color capitalized as the loop runs\n",
-    "\n"
+    "color = rainbow_text.readline()\n",
+    "\n",
+    "while color:\n",
+    "    print (color[:-1].capitalize())\n",
+    "    color = rainbow_text.readline()\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] close rainbow_text \n",
-    "\n"
+    "\n",
+    "rainbow_text.close()"
    ]
   },
   {
@@ -361,10 +430,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example\n",
@@ -374,11 +441,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "loops\n",
+      "\n",
+      "I repeat\n",
+      "\n",
+      "until I\n",
+      "\n",
+      "break\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - readline while loop without removing '\\n'\n",
     "poem_line = poem1.readline()\n",
@@ -399,11 +485,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loops I repeat\n",
+      "loops\n",
+      "loops\n",
+      "loops\n",
+      "I repeat\n",
+      "until I\n",
+      "break\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - readline with .strip() to remove '\\n'\n",
     "poem1 = open('poem1.txt', 'r')\n",
@@ -435,28 +533,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] open rainbow.txt as rainbow_text as read-only  \n",
-    "\n"
+    "rainbow_text = open(\"rainbow.txt\",\"r\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RED\n",
+      "ORANGE\n",
+      "YELLOW\n",
+      "GREEN\n",
+      "BLUE\n",
+      "INDIGO\n",
+      "VIOLET\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] read a color from each line of rainbow_text in a while loop  \n",
     "# use .strip to remove the whitespace '\\n' character \n",
     "# print each color upper case \n",
-    "\n"
+    "color = rainbow_text.readline()\n",
+    "\n",
+    "while color:\n",
+    "    print (color.upper().strip())\n",
+    "    color = rainbow_text.readline()\n",
+    "    \n",
+    "rainbow_text.close()\n"
    ]
   },
   {
@@ -487,11 +601,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    71  100    71    0     0    375      0 --:--:-- --:--:-- --:--:--   377\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example: import rainbow_messy.txt\n",
     "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/rainbow_messy -o rainbow_messy.txt"
@@ -499,10 +623,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] review and run example: open file read only\n",
@@ -511,11 +633,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**red**\n",
+      "\n",
+      "**orange**\n",
+      "\n",
+      "**yellow**\n",
+      "\n",
+      "**green**\n",
+      "\n",
+      "**blue**\n",
+      "\n",
+      "**indigo**\n",
+      "\n",
+      "**violet**\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example: .readline() without .strip()\n",
     "\n",
@@ -528,11 +669,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red\n",
+      "orange\n",
+      "yellow\n",
+      "green\n",
+      "blue\n",
+      "indigo\n",
+      "violet\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example: strip \"*\" and newline ('\\n')\n",
     "rainbow_messy = open('rainbow_messy.txt', 'r')\n",
@@ -563,11 +716,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    77  100    77    0     0    390      0 --:--:-- --:--:-- --:--:--   390\n",
+      "100    77  100    77    0     0    390      0 --:--:-- --:--:-- --:--:--   390\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import the file\n",
     "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/cities_messy -o cities_messy.txt"
@@ -575,10 +739,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] run to read the file into memory\n",
@@ -587,19 +749,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beijing\n",
+      "Cairo\n",
+      "London\n",
+      "Nairobi\n",
+      "New York City\n",
+      "Sydney\n",
+      "Tokyo\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] edit the code to remove leading or trailing colon, newline and space characters\n",
-    "line = cities_messy.readline()\n",
+    "line = cities_messy.readline().strip(\": \\n\")\n",
     "\n",
     "while line:\n",
     "    print(line)\n",
-    "    line = cities_messy.readline()\n",
-    "\n"
+    "    line = cities_messy.readline().strip(\": \\n\")\n",
+    "\n",
+    "    \n",
+    "cities_messy.close()\n"
    ]
   },
   {
@@ -618,43 +794,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100    75  100    75    0     0    334      0 --:--:-- --:--:-- --:--:--   336\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] import https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem2_messy as poem2_messy.txt  \n",
-    "\n"
+    "\n",
+    "!curl https://raw.githubusercontent.com/MicrosoftLearning/intropython/master/poem2_messy -o poem2_messy.txt\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# [ ] open poem2_messy.txt as poem2_messy in read mode\n",
-    "\n"
+    "\n",
+    "poem2_messy = open(\"poem2_messy.txt\",\"r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "while True\n",
+      "I loop\n",
+      "True\n",
+      "loop\n",
+      "True\n",
+      "loop\n",
+      "not True\n",
+      "False\n",
+      "end\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] edit while loop to strip the leading and trailing parentheses, and newlines\n",
     "# [ ] print the poem \n",
-    "line = poem2_messy.readline()\n",
+    "line = poem2_messy.readline().strip(\"()\\n\")\n",
     "\n",
     "while line:\n",
     "    print(line)\n",
-    "    line = poem2_messy.readline()\n",
+    "    line = poem2_messy.readline().strip(\"()\\n\")\n",
     "\n",
     "\n"
    ]
@@ -686,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
